# hello-llvm

./: LLVM-IR.md  hello-llvm.code-workspace
experiments/: README.md
experiments/1-just-return/: .gitignore  README.md  just-return-minimal.s  just-return.ll  just-return.s
experiments/2-helloworld/: README.md  helloworld.ll  helloworld.s
experiments/3-bf-interpreter/: README.md  bf.test.ts  bf.ts
experiments/4-bf-compiler/: .gitignore  Makefile  README.md  bench.sh  bf.c  bf.ll  output.ll  test.ts
experiments/4-bf-compiler/samples/: loop.c  loop.ll  pointer-inc-dec.c  pointer-inc-dec.ll  pointer-loop.c  pointer-loop.ll  pointer-putchar.c  pointer-putchar.ll  pointer.c  pointer.ll  putchar.c  putchar.ll
experiments/5-hello-pass/: .env.example  .gitignore  CMakeLists.txt  README.md  justfile
experiments/5-hello-pass/inputs/: dot.c  dot.ll  functions.ll  if.c  lvn.c  lvn.ll  lvn_reg.ll  lvn_reg.passed.ll
experiments/5-hello-pass/src/: CMakeLists.txt  LocalValueNumbering.cpp
